test/libsolidity/syntaxTests/inlineAssembly/invalid/jump_disallowed.sol
contract C {
    function f() pure public {
        assembly {
            jump(2)
        }
    }
}
// ----
// DeclarationError: (75-79): Function not found.
